Full frontend update: dashboards, department details, API and structure improvements

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Infosys CivicPulse Hub</title>
 
-    <!-- Ensures correct path resolution under GitHub Pages subfolder -->
+    <!-- ✅ This ensures correct asset resolution for GitHub Pages -->
     <base href="/Infosys_CivicPulse-Hub-Unified-Smart-City-Feedback-and-Redressal-System/" />
   </head>
   <body>
     <div id="root"></div>
 
-    <!-- Important: use relative path for Vite entry file -->
-    <script type="module" src="./src/main.jsx"></script>
+    <!-- ✅ Use absolute Vite entry path for production -->
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
